--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "hyperliquid",
+  "name": "hyperliquid-prx",
   "version": "1.6.2",
-  "description": "SDK for Hyperliquid API",
+  "description": "SDK for Hyperliquid API - fork from https://github.com/nomeida/hyperliquid",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -47,22 +48,29 @@
   "license": "MIT",
   "dependencies": {
     "@msgpack/msgpack": "^3.0.0-beta2",
-    "axios": "^1.7.2",
-    "ethers": "^6.13.2"
+    "axios": "^1.7.9",
+    "axios-retry": "^4.5.0",
+    "dotenv": "^16.4.7",
+    "ethers": "^6.13.2",
+    "fs": "^0.0.1-security",
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
+    "path": "^0.12.7",
+    "url": "^0.11.4"
   },
   "devDependencies": {
-    "tsup": "^8.0.0",
-    "typescript": "^5.0.0",
-    "jest": "^29.0.0",
     "@types/jest": "^29.0.0",
-    "serve": "^14.0.0"
+    "jest": "^29.0.0",
+    "serve": "^14.0.0",
+    "tsup": "^8.0.0",
+    "typescript": "^5.0.0"
   },
   "directories": {
     "test": "tests"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nomeida/hyperliquid-api"
+    "url": "https://github.com/rjoshig/hyperliquid-prx"
   },
   "engines": {
     "node": ">=16.0.0"
